# LoL-Esports

./: .gitignore  README.md  create_html.py  elo_rating.ipynb  elo_rating.py  elo_rating_nb.py  elo_rating_player.ipynb  elo_rating_player.py  elo_rating_player_nb.py  glicko_rating.ipynb  glicko_rating.py  glicko_rating_error.ipynb  glicko_rating_error_nb.py  glicko_rating_matches.ipynb  glicko_rating_matches.py  glicko_rating_matches_nb.py  glicko_rating_nb.py  google_sheet.py  lol_esports.ipynb  lol_esports.py  lol_esports_nb.py  lol_fandom.py  lol_fandom_pl.py  lol_league.py  lol_matches_data.ipynb  lol_matches_data_nb.py  lol_matches_mwclient.ipynb  lol_matches_mwclient.py  lol_matches_mwclient_nb.py  lol_stats.ipynb  lol_stats.py  lol_stats_nb.py  lolesports_stats.py  parse_matches.ipynb  parse_matches.py  parse_matches_nb.py  parse_matches_polars.py  parse_matches_polars_nb.py  pyproject.toml  riot_apis.ipynb  (+9 more)
