[project]
name = "LoL-esports"
version = "0.1.0"
description = ""
authors = [{ name = "posky", email = "pjm5810@gmail.com" }]
dependencies = [
    "pandas>=2.0.3",
    "tqdm>=4.65.0",
    "mwclient>=0.10.1",
    "google-api-python-client>=2.95.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "scikit-learn>=1.3.0",
    "plotly>=5.15.0",
    "nbformat>=5.9.2",
    "tabulate>=0.9.0",
    "ratelimit>=2.2.1",
    "furl>=2.1.3",
    "polars>=0.18.15",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.ruff]
line-length = 88
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PD",  # pandas-vet
    "PL",  # Pyling
    "NPY", # NumPy-specific rules
    "RUF", # Ruff-specific rules
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "I",   # isort
]
ignore = []
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
fix = true
fixable = [
    "E",
    "F",
    "ANN",
    "B",
    "ICN",
    "G",
    "PIE",
    "PYI",
    "SIM",
    "PD",
    "PL",
    "NPY",
    "RUF",
    "UP",
    "D",
    "I",
]
unfixable = [
    "F401",
    "F601",
    "F602",
    "F841",
    "PIE794",
    "D203",
    "D212",
    "D215",
    "D400",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true
constants = ["constant"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.black]
line-length = 88
preview = true
